--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <!-- Site Title and Subtitle -->
-    <img src="sunway_lagoon_logo.jpeg" alt="Sunway Lagoon Logo" class="hero-logo">
+    <img src="sunway-lagoon-logo.png" alt="Sunway Lagoon Logo" class="hero-logo">
     <h1>Functions in the Real World</h1>
     <h3>Sunway Lagoon Edition</h3>
   </section>
@@ -412,7 +412,7 @@
     <!-- Body content card -->
     <div class="function-body">
       <div class="w3-center">
-        <img src="sunway_lagoon_logo.jpeg" class="logo-small" alt="Sunway Lagoon Logo">
+        <img src="sunway-lagoon-logo.png" class="logo-small" alt="Sunway Lagoon Logo">
         <h2>Reciprocal of x Squared Function</h2>
       </div>
       <p>
@@ -503,7 +503,7 @@
     <!-- Body content card -->
     <div class="function-body">
       <div class="w3-center">
-        <img src="sunway_lagoon_logo.jpeg" class="logo-small" alt="Sunway Lagoon Logo">
+        <img src="sunway-lagoon-logo.png" class="logo-small" alt="Sunway Lagoon Logo">
         <h2>Exponential Function</h2>
       </div>
       <p>
@@ -578,7 +578,7 @@
   <!-- 2B. Logarithmic Function -->
   <section id="logarithmic" class="function-section section-type-explog">
     <div class="w3-center">
-      <img src="sunway_lagoon_logo.jpeg" class="logo-small" alt="Sunway Lagoon Logo">
+      <img src="sunway-lagoon-logo.png" class="logo-small" alt="Sunway Lagoon Logo">
       <h2>Logarithmic Function</h2>
     </div>
     <p>
@@ -631,7 +631,7 @@
   <!-- 3. Polynomial Function -->
   <section id="polynomial" class="function-section section-type-polynomial">
     <div class="w3-center">
-      <img src="sunway_lagoon_logo.jpeg" class="logo-small" alt="Sunway Lagoon Logo">
+      <img src="sunway-lagoon-logo.png" class="logo-small" alt="Sunway Lagoon Logo">
       <h2>Polynomial Function</h2>
     </div>
     <p>
@@ -890,6 +890,8 @@
     <p class="w3-margin-top">
       We chose the Ferris wheel as our model because its spokes are very straight, extending from the center outwards, making it the perfect choice for an absolute value function model. Here is the parent function:
     </p>
+    <!-- Ride image -->
+    <img src="la-grande-roue.jpg" alt="la-grande-roue" class="ride-image">
     <h3>Parent Function</h3>
     <p>\( y = |x| \)</p>
     <h3 class="w3-margin-top">Transformed Functions</h3>
