--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     </ul>
     <h4>Explanation</h4>
     <p>
-      First, to make the function show a growing trend, we applied a reflection, which could be done over either the x or y axis. In our case, we chose the x axis. However, as x approaches 0, the function begins to change rapidly because x is in the denominator. So, we decided to apply a vertical stretch. We found that it best fits the bottom of the pirate ship when the value of a is between 40 and 50, ultimately settling on 45.8. Finally, we adjusted the asymptote to the pirate ship's position, by adding a horizontal translation of 10.9 units to the right and a vertical transition of 12 units downwards.
+      First, to make the function show a growing trend, we applied a reflection, which could be done over either the x or y axis. In our case, we chose the x axis. However, as x approaches 0, the function begins to change rapidly because x is in the denominator. So, we decided to apply a vertical stretch. We found that it best fits the bottom of the pirate ship when the value of a is between 40 and 50.If the value is above 50, the image is too steep; if it is below 40, it is too flat. ultimately settling on 45.8. Finally, we adjusted the asymptote to the pirate ship's position, by adding a horizontal translation of 10.9 units to the right and a vertical transition of 12 units downwards.
     </p>
     <p>
       To capture the remaining portion, we add the second function:
@@ -379,7 +379,7 @@
     </ul>
     <h4>Explanation</h4>
     <p>
-      Similar to the first function, this one also needs to be reflected first. Since the remaining part of the pirate ship is quite steep, no significant changes will be needed. We began with a vertical stretch by a factor of 4, and then aligned the curve with the pirate ship by applying horizontal translation of 8 units to the right and vertical translation 2.3 units downwards. At this point, the top of the curve is positioned very close to the top of the pirate ship so, we applied a horizontal compression by a factor of 1.8, and adjusted the vertical stretch from 4 to 3.9, to make the function’s graph fit the entire ride.
+      Similar to the first function, this one also needs to be reflected first. Since the remaining part of the pirate ship is quite steep, no significant changes will be needed. We began with a vertical stretch by a factor of 4, and then aligned the curve with the pirate ship by applying horizontal translation of 8 units to the right and vertical translation 2.3 units downwards. At this point, the top of the curve is positioned very close to the top of the pirate ship, so we applied a horizontal compression by a factor of 1.8 (When the horizontal scale factor k is close to 2, the function best matches the shape of the ride. If k is greater than 2, the graph becomes too steep, and if k is less than 2, the graph becomes too flat, after trying different, we found that 1.8 is the most suitable value),  and adjusted the vertical stretch from 4 to 3.9, to make the function’s graph fit the entire ride.
     </p>
     <h4>Domain and Range</h4>
     <p>
@@ -450,7 +450,7 @@
       We took the right part of the parent function, as it is decreasing from the second to the fourth quadrant. To make the parent function reach the pirate cutlass below, we made a vertical translation 3.7 units downwards.
     </p>
     <p>
-      But the bottom left corner is too vertical; to make it more smooth, we chose to make a transformation: Vertically stretch by a factor of 8.2. Now, the bottom left corner has become much flatter. However, compared to the curve of the pirate cutlass, the upper part is still too vertical, so we decided to horizontally stretch it up by a factor of 10. An excellent curve appears!
+      But the bottom left corner is too vertical; to make it more smooth, we chose to make a transformation: Vertically stretch by a factor of 8.2. However, if we use 8, the lower half of the function deviates from the cutlass. We then tried 8.3, and it reappeared on the cutlass's surface, so we chose 8.2 again. Now, the bottom left corner has become much flatter. However, compared to the curve of the pirate cutlass, the upper part is still too vertical, so we decided to horizontally stretch it up by a factor of 10. An excellent curve appears!
     </p>
     <p>
       Finally, we translated it 6.1 units to the left to make the function fully match the pirate cutlass.
@@ -469,10 +469,10 @@
     </ul>
     <h4>Explanation</h4>
     <p>
-      We took the right part of the parent function, as it is growing in the first quadrant. To make the parent function reach the pirate cutlass below, I made a vertical translation 3.7 units downwards.
+      We took the left part of the parent function, as it is growing from the third to the first quadrant. To make the parent function reach the pirate cutlass below, I made a vertical translation 3.7 units downwards.
     </p>
     <p>
-      But the bottom right corner is too vertical; to make it more smooth, we chose to make a transformation: Vertically stretch by a factor of 8.2. Now, the bottom left corner has become much flatter. However, compared to the curve of the pirate cutlass, the upper part is still too vertical, so we decided to horizontally stretch it up by a factor of 10. A nice curve appears!
+      But the bottom right corner is too vertical; to make it more smooth, we chose to make a transformation: Vertically stretch by a factor of 8.2. As we mentioned in the previous text,  if we use 8.1, the lower half of the function deviates from the cutlass. We then tried 8.3, and it reappeared on the cutlass's surface, so we chose 8.2 again. Now, the bottom left corner has become much flatter. However, compared to the curve of the pirate cutlass, the upper part is still too vertical, so we decided to horizontally stretch it up by a factor of 10. A nice curve appears!
     </p>
     <p>
       Lastly, we translated 6.6 units to the right to make the function fully match the pirate cutlass.
@@ -561,7 +561,7 @@
       We first moved the function downward by 3.5 units to bring its asymptote closer to the ground. Then, because it changed too rapidly when approaching negative infinity, we shifted it 8 units to the left, at which point the graph intersected the slide. However, the left half of the graph has a very large curvature, so we applied a horizontal stretch by a factor of 5 (1/0.2) to make it flat. At this stage, the slopes of the two curves were very similar, and the right half of the graph matches the slide perfectly.
     </p>
     <p>
-      Since the graph was below the slide, we applied a vertical stretch by a factor of 4. At this point, the graph was almost aligned with the ride, but it was still slightly above it, so we moved it downward by another 0.5 units (a total translation of 4 units). We then made  some slight adjustment by changing the horizontal stretch from 5 to 5.26 and the vertical stretch from 4 to 4.1.
+      Since the graph was below the slide, we applied a vertical stretch by a factor of 4. At this point, the graph was almost aligned with the ride, but it was still slightly above it, so we moved it downward by another 0.5 units (a total translation of 4 units). We then made  some slight adjustment by changing the horizontal stretch from 5 (k=2) to 5.26(k=1.8), （Because this section is almost a straight line but still has a slight angle, using k = 2 makes the graph too flat.） and the vertical stretch from 4 to 4.1 (Increasing the horizontal stretch allows the graph to move upward and match the slide more closely, otherwise the function would fall below the slide.).
     </p>
     <p>
       At this point, the graph aligned perfectly with the ride except for a small portion on the far right. Because this section of the slide is almost a straight line, we modified the position of the asymptote of the same function to the upper left to create a new function. Finally, the two functions together covered the entire ride.
@@ -670,7 +670,7 @@
     </ul>
     <h4>Explanation</h4>
     <p>
-      As mentioned in the previous text, we speculated this function passes through the point (0,0), (5.6,0) and (-8.6,0), so we had our parent function. However, the portion between (-8.6,0) and (0,0) is too steep as well as the part between (0,0) and (5.6,0), as a result, we vertically compressed the function by a factor of 0.0121. Then we found the function is too low compared to the image, so we vertically translate the function 0.1 unit down.
+      As mentioned in the previous text, we speculated this function passes through the point (0,0), (5.6,0) and (-8.6,0), so we had our parent function. However, the portion between (-8.6,0) and (0,0) is too steep as well as the part between (0,0) and (5.6,0), as a result, we vertically compressed the function by a factor of 0.0121. We tried 0.012, but even a change of 0.0001 caused the function to embed itself in the middle of the roller coaster track. So we still used the factor of 0.0121. Then we found the function is too low compared to the image, so we vertically translate the function 0.1 unit down.
     </p>
     <h4>Domain and Range</h4>
     <p>
@@ -736,7 +736,7 @@
       We observed that the bottom part, which is below the x-axis, has a curve at the top. In contrast, the upon part of the function had a curve at the bottom. In this case, we chose to use the bottom part which is below the x-axis.
     </p>
     <p>
-      First, we raised it up because it was under the x-axis, so we have: Translate up 11 units. Then, we noticed that the curve at the top was too narrow, so we applied: Horizontally stretch by a factor of 25/13. However, the function still deviated from this image, so we slightly moved the function: Translate 2.9 units to the right. That’s not the end, the  curves at the top left and top right corners are too blunt, and the function is a bit too high, so we made an improvement: Vertically stretch by a factor of 1.9. When we did a vertical stretching, the upper part is far from the x-axis, and so is the lower part.
+      First, we raised it up because it was under the x-axis, so we have: Translate up 11 units. Then, we noticed that the curve at the top was too narrow, so we applied: Horizontally stretch by a factor of 2. However, the function still deviated from this image, so we slightly moved the function: Translate 2.9 units to the right. But the roller coaster was too narrow compared to the function, so we changed the factor of “2” to “25/13”,  “Horizontally stretch by a factor of 25/13.” That’s not the end, the  curves at the top left and top right corners are too blunt, and the function is a bit too high, so we made an improvement: Vertically stretch by a factor of 1.9. If the factor were 2, the left half of the function would be embedded in the middle of the roller coaster. If it were 1.8, the function would deviate from the roller coaster, so we kept 1.9. When we did a vertical stretching, the upper part is far from the x-axis, and so is the lower part.
     </p>
     <h4>Domain and Range</h4>
     <p>
@@ -819,7 +819,8 @@
     </ul>
     <h4>Explanation</h4>
     <p>
-      Interestingly, the four functions use almost the same transformations: the amplitude A remains nearly unchanged (a≈1). As the periods of these functions are slightly longer than the parent function,  we stretched them horizontally by factors of  approximately 0.78 (average value) to fit the image. After all, very few people can withstand a roller coaster with too many steep drops.
+      Interestingly, the four functions use almost the same transformations: the amplitude A remains nearly unchanged (a≈1). As the periods of these functions are slightly longer than the parent function,  we stretched them horizontally by factors of  approximately 0.78 (average value) to fit the image. If the value of k is too large (horizontal compression), the roller coaster will change too rapidly within a short period. If the value of a is too large (vertical stretch), the height of the ups and downs will become excessively large.
+ After all, very few people can withstand a roller coaster with too many steep drops.
     </p>
     <p>
       The phase shifts d and vertical translations c vary only to adjust local alignment.
@@ -863,7 +864,7 @@
       <li>Vertical translation down 7.38 units.</li>
     </ul>
     <p>
-      The first step that we took is stretching horizontally to align the bottom of the function graph with the opening of the amusement park ride: Horizontal stretch by a factor of 20/3. However, the bottom of the function is still flat, so we tried to stretch the function vertically: Vertical stretch by a factor of 4. After this, we got a perfect curve on the graph. But we need to drag it down since it’s  still on top of the ride: Translate down 7.38 units. We've mostly finished the work, but there were still some minor issues-it could fit the image well, so we made a little improvement: Translate 0.2 units to the left.
+      The first step that we took is stretching horizontally to align the bottom of the function graph with the opening of the amusement park ride: Horizontal stretch by a factor of 20/3. If this factor was 2, the opening of the function would be too narrow; if this factor was 10, the opening of the function would be too large. So we still chose the factor of 20/3. However, the bottom of the function is still flat, so we tried to stretch the function vertically: Vertical stretch by a factor of 4. If this factor was 5, the opening of the function would be too narrow; if this number is 3, the opening of the function would be too large. Therefore, we stick to our original choice. After this, we got a perfect curve on the graph. But we need to drag it down since it’s  still on top of the ride: Translate down 7.38 units. We've mostly finished the work, but there were still some minor issues-it could fit the image well, so we made a little improvement: Translate 0.2 units to the left.
     </p>
     <h4>Domain and Range</h4>
     <p>
@@ -982,7 +983,7 @@
     </ul>
     <h4>Explanation</h4>
     <p>
-      Absolute value functions are quite straightforward to explain. If they lie above the x-axis, then they don't need to be reflected about the x-axis. Conversely, if they lie below the x-axis, then they do, and we add a negative sign in front of the function. All we need to do is vertically stretch, compress, or reflect it on the x-axis.
+     Absolute value functions are quite straightforward to explain. The graph can be understood as being formed by many radii of a Ferris wheel, just like the rotating radius in the unit circle for trigonometric functions. For an absolute value function, all we need to do is vertically stretch, compress, or reflect it across the x-axis. Vertical stretches or horizontal compressions move the graph closer to the y-axis, which makes the angle smaller. Vertical compressions or horizontal stretches move the graph closer to the x-axis, which makes the angle larger. In addition, if any part of the graph lies below the x-axis, which corresponds to the lower half of the Ferris wheel, it must be reflected upward by adding a negative sign.
     </p>
     <p>
       Let’s talk about their domains and ranges. We are describing the function in terms of the spokes of a ferris wheel, so we need to restrict the range and domain from the central axle to the cabin. We consider the central axis of the Ferris wheel as the origin of the function and cabin as the endpoint to restrict the range and domain. So we have domain and range in each function.
@@ -1010,3 +1011,4 @@
   </footer>
 </body>
 </html>
+
