--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
     </p>
     <p>and we apply the following transformations to match the ride:</p>
     <ul class="transform-list">
-      <li>Reflection across the x-axis</li>
-      <li>Vertical stretch by factor 45.8</li>
-      <li>Horizontal translation 10.9 units to the right</li>
-      <li>Vertical translation 12 units downwards</li>
+      <li>Reflection on x-axis</li>
+      <li>Vertical stretch by factor 3.9/1.8</li>
+      <li>Horizontal translation 8 units to the right</li>
+      <li>Vertical translation 2.3 units downwards</li>
     </ul>
     <h4>Explanation</h4>
     <p>
@@ -372,10 +372,10 @@
       \(g(x) = -45.8\left(\frac{1}{x-10.9}\right) - 12,\quad 0.5 \le x \le 7.1\)
     </p>
     <ul class="transform-list">
-      <li>Reflection on x-axis</li>
-      <li>Vertical stretch by factor 3.9/1.8</li>
-      <li>Horizontal translation 8 units to the right</li>
-      <li>Vertical translation 2.3 units downwards</li>
+      <li>Reflection on the x-axis</li>
+      <li>Vertical stretch by factor 45.8</li>
+      <li>Horizontal translation 10.9 units to the right</li>
+      <li>Vertical translation 12 units downwards</li>
     </ul>
     <h4>Explanation</h4>
     <p>
