--- a/index.html
+++ b/index.html
@@ -351,24 +351,7 @@
     <p>
       However, due to camera perspective and other factors, a single function cannot fully fit the ride. Our first attempt uses
     </p>
-    <p>
-      \(h(x) = -3.9\left(\frac{1}{1.8(x-8)}\right) - 2.3,\quad 7.1 \le x \le 7.65\)
-    </p>
-    <p>and we apply the following transformations to match the ride:</p>
-    <ul class="transform-list">
-      <li>Reflection on x-axis</li>
-      <li>Vertical stretch by factor 3.9/1.8</li>
-      <li>Horizontal translation 8 units to the right</li>
-      <li>Vertical translation 2.3 units downwards</li>
-    </ul>
-    <h4>Explanation</h4>
-    <p>
-      First, to make the function show a growing trend, we applied a reflection, which could be done over either the x or y axis. In our case, we chose the x axis. However, as x approaches 0, the function begins to change rapidly because x is in the denominator. So, we decided to apply a vertical stretch. We found that it best fits the bottom of the pirate ship when the value of a is between 40 and 50.If the value is above 50, the image is too steep; if it is below 40, it is too flat. ultimately settling on 45.8. Finally, we adjusted the asymptote to the pirate ship's position, by adding a horizontal translation of 10.9 units to the right and a vertical transition of 12 units downwards.
-    </p>
-    <p>
-      To capture the remaining portion, we add the second function:
-    </p>
-    <p>
+   <p>
       \(g(x) = -45.8\left(\frac{1}{x-10.9}\right) - 12,\quad 0.5 \le x \le 7.1\)
     </p>
     <ul class="transform-list">
@@ -379,7 +362,25 @@
     </ul>
     <h4>Explanation</h4>
     <p>
-      Similar to the first function, this one also needs to be reflected first. Since the remaining part of the pirate ship is quite steep, no significant changes will be needed. We began with a vertical stretch by a factor of 4, and then aligned the curve with the pirate ship by applying horizontal translation of 8 units to the right and vertical translation 2.3 units downwards. At this point, the top of the curve is positioned very close to the top of the pirate ship, so we applied a horizontal compression by a factor of 1.8 (When the horizontal scale factor k is close to 2, the function best matches the shape of the ride. If k is greater than 2, the graph becomes too steep, and if k is less than 2, the graph becomes too flat, after trying different, we found that 1.8 is the most suitable value),  and adjusted the vertical stretch from 4 to 3.9, to make the function’s graph fit the entire ride.
+      First, to make the function show a growing trend, we applied a reflection, which could be done over either the x or y axis. In our case, we chose the x axis. However, as x approaches 8, the function begins to change rapidly because x is in the denominator. So, we decided to apply a vertical stretch. We found that it best fits the bottom of the pirate ship when the value of a is between 40 and 50.If the value is above 50, the image is too steep; if it is below 40, it is too flat. ultimately settling on 45.8. Finally, we adjusted the asymptote to the pirate ship's position, by adding a horizontal translation of 10.9 units to the right and a vertical transition of 12 units downwards.
+    </p>
+    <p>
+      To capture the remaining portion, we add the second function:
+    </p>
+       <p>
+      \(h(x) = -3.9\left(\frac{1}{1.8(x-8)}\right) - 2.3,\quad 7.1 \le x \le 7.65\)
+    </p>
+    <p>and we apply the following transformations to match the ride:</p>
+    <ul class="transform-list">
+      <li>Reflection on x-axis</li>
+      <li>Vertical stretch by factor 3.9</li>
+      <li>Horizontal compression bya  factor of 5</li>
+      <li>Horizontal translation 8 units to the right</li>
+      <li>Vertical translation 2.3 units downwards</li>
+    </ul>
+    <h4>Explanation</h4>
+    <p>
+      Similar to the first function, this one also needs to be reflected first. Since the remaining part of the pirate ship is quite steep, no significant changes will be needed. We began with a vertical stretch by a factor of 4, and then aligned the curve with the pirate ship by applying horizontal translation of 8 units to the right and vertical translation 2.3 units downwards. At this point, the top of the curve is positioned very close to the top of the pirate ship, so we applied a horizontal compression by a factor of 5/9 (When the k is close to 2, the function best matches the shape of the ride. If k is greater than 2, the graph becomes too steep, and if k is less than 2, the graph becomes too flat, after trying different, we found that 1.8 is the most suitable value),  and adjusted the vertical stretch from 4 to 3.9, to make the function’s graph fit the entire ride.
     </p>
     <h4>Domain and Range</h4>
     <p>
