--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <ul class="transform-list">
       <li>Reflection on x-axis</li>
       <li>Vertical stretch by factor 3.9</li>
-      <li>Horizontal compression bya  factor of 5</li>
+      <li>Horizontal compression by a factor of 5/9</li>
       <li>Horizontal translation 8 units to the right</li>
       <li>Vertical translation 2.3 units downwards</li>
     </ul>
