--- a/index.html
+++ b/index.html
@@ -667,11 +667,11 @@
     </p>
     <ul class="transform-list">
       <li>Vertically compress by a factor of 0.0121.</li>
-      <li>Vertically translate down 0.1 units.</li>
+      <li>Vertically translate 0.1 unit up.</li>
     </ul>
     <h4>Explanation</h4>
     <p>
-      As mentioned in the previous text, we speculated this function passes through the point (0,0), (5.6,0) and (-8.6,0), so we had our parent function. However, the portion between (-8.6,0) and (0,0) is too steep as well as the part between (0,0) and (5.6,0), as a result, we vertically compressed the function by a factor of 0.0121. We tried 0.012, but even a change of 0.0001 caused the function to embed itself in the middle of the roller coaster track. So we still used the factor of 0.0121. Then we found the function is too low compared to the image, so we vertically translate the function 0.1 unit down.
+      As mentioned in the previous text, we speculated this function passes through the point (0,0), (5.6,0) and (-8.6,0), so we had our parent function. However, the portion between (-8.6,0) and (0,0) is too steep as well as the part between (0,0) and (5.6,0), as a result, we vertically compressed the function by a factor of 0.0121. We tried 0.012, but even a change of 0.0001 caused the function to embed itself in the middle of the roller coaster track. So we still used the factor of 0.0121. Then we found the function is too low compared to the image, so we vertically translate the function 0.1 unit up.
     </p>
     <h4>Domain and Range</h4>
     <p>
