--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
       The second function continues from x=7.1 to x=7.65, reaching approximately (7.65,3.89). Although the horizontal span is short, the curve is steep, producing a large vertical change; hence:
     </p>
     <ul class="domain-range-list">
-      <li>f(x): Domain: [7.1, 7.65]</li>
-      <li>f(x): Range: [0.11, 3.89] (Rounded)</li>
+      <li>h(x): Domain: [7.1, 7.65]</li>
+      <li>h(x): Range: [0.11, 3.89] (Rounded)</li>
     </ul>
     </div><!-- /.function-body -->
   </section>
