--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
     </p>
     <div class="two-column">
       <div>
-        <h4>First Function</h4>
+        <h4>Right Part</h4>
         <p>\( f(x)=4.1\left(\frac12\right)^{0.19(x+16)} - 3.6 \quad \{5 \le x \le 10\}\)</p>
         <ul class="transform-list">
           <li>Vertically stretch by a factor of 4.1</li>
@@ -542,7 +542,7 @@
         <p>Range :[−3.46, −3.34] (Rounded)</p>
       </div>
       <div>
-        <h4>Second Function</h4>
+        <h4>Left Part</h4>
         <p>\( g(x)=4.1\left(\frac12\right)^{0.19(x+8.8)} - 4 \quad \{-10 \le x \le 5\}\)</p>
         <ul class="transform-list">
           <li>Vertically stretch by a factor of 4.1</li>
