--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
     <ul class="transform-list">
       <li>Vertically stretch by a factor of 4.</li>
       <li>Horizontally stretch by a factor of 20/3.</li>
-      <li>Horizontally translation 0.2 units to the left.</li>
+      <li>Horizontal translation 0.2 units to the left.</li>
       <li>Vertical translation down 7.38 units.</li>
     </ul>
     <p>
