--- a/index.html
+++ b/index.html
@@ -530,18 +530,6 @@
     </p>
     <div class="two-column">
       <div>
-        <h4>Right Part</h4>
-        <p>\( f(x)=4.1\left(\frac12\right)^{0.19(x+16)} - 3.6 \quad \{5 \le x \le 10\}\)</p>
-        <ul class="transform-list">
-          <li>Vertically stretch by a factor of 4.1</li>
-          <li>Horizontal stretch by a factor of 5.26 (1/0.19, Rounded)</li>
-          <li>Horizontal translation 16 units to the left</li>
-          <li>Vertical translation 3.6 units downwards</li>
-        </ul>
-        <p>Domain: [5,10]</p>
-        <p>Range :[−3.46, −3.34] (Rounded)</p>
-      </div>
-      <div>
         <h4>Left Part</h4>
         <p>\( g(x)=4.1\left(\frac12\right)^{0.19(x+8.8)} - 4 \quad \{-10 \le x \le 5\}\)</p>
         <ul class="transform-list">
@@ -552,6 +540,18 @@
         </ul>
         <p>Domain: [−10, 5]</p>
         <p>Range: [−3.33, 0.80] (Rounded)</p>
+      </div>
+      <div>
+         <h4>Right Part</h4>
+        <p>\( f(x)=4.1\left(\frac12\right)^{0.19(x+16)} - 3.6 \quad \{5 \le x \le 10\}\)</p>
+        <ul class="transform-list">
+          <li>Vertically stretch by a factor of 4.1</li>
+          <li>Horizontal stretch by a factor of 5.26 (1/0.19, Rounded)</li>
+          <li>Horizontal translation 16 units to the left</li>
+          <li>Vertical translation 3.6 units downwards</li>
+        </ul>
+        <p>Domain: [5,10]</p>
+        <p>Range :[−3.46, −3.34] (Rounded)</p>
       </div>
     </div>
     <h4>Explanation</h4>
@@ -565,7 +565,7 @@
       Since the graph was below the slide, we applied a vertical stretch by a factor of 4. At this point, the graph was almost aligned with the ride, but it was still slightly above it, so we moved it downward by another 0.5 units (a total translation of 4 units). We then made  some slight adjustment by changing the horizontal stretch from 5 (k=0.2) to 5.26(k=0.19), （Because this section is almost a straight line but still has a slight angle, using k = 0.19 makes the graph too flat.） and the vertical stretch from 4 to 4.1 (Increasing the horizontal stretch allows the graph to move upward and match the slide more closely, otherwise the function would fall below the slide.).
     </p>
     <p>
-      At this point, the graph aligned perfectly with the ride except for a small portion on the far right. Because this section of the slide is almost a straight line, we modified the position of the asymptote of the same function to the upper left to create a new function. Finally, the two functions together covered the entire ride.
+      At this point, the graph aligned perfectly with the ride except for a small portion on the far right. Because this section of the slide is almost a straight line, we modified the position of the asymptote of the same function to the upper left to create a new function.((Horizontal translation 16 units to the left, Vertical translation 3.6 units downwards)) Finally, the two functions together covered the entire ride.
     </p>
     <h4>Range and Domain</h4>
     <p>
